used css styles in gradio interface

--- a/cpp_code_generator.ipynb
+++ b/cpp_code_generator.ipynb
@@ -497,8 +497,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "ba6fec3e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def run_python(code):\n",
+    "    globals_dict = {\"__builtins__\": __builtins__}\n",
+    "\n",
+    "    buffer = io.StringIO()\n",
+    "    old_stdout = sys.stdout\n",
+    "    sys.stdout = buffer\n",
+    "\n",
+    "    try:\n",
+    "        exec(code, globals_dict)\n",
+    "        output = buffer.getvalue()\n",
+    "    except Exception as e:\n",
+    "        output = f\"Error: {e}\"\n",
+    "    finally:\n",
+    "        sys.stdout = old_stdout\n",
+    "\n",
+    "    return output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "b8f9ac81",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Use the commands from GPT 5\n",
+    "\n",
+    "def compile_and_run(code):\n",
+    "    write_output(code)\n",
+    "    try:\n",
+    "        subprocess.run(compile_command, check=True, text=True, capture_output=True)\n",
+    "        run_result = subprocess.run(run_command, check=True, text=True, capture_output=True)\n",
+    "        return run_result.stdout\n",
+    "    except subprocess.CalledProcessError as e:\n",
+    "        return f\"An error occurred:\\n{e.stderr}\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "208ed231",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\srina\\projects\\llm_projects\\python_to_optimized_C++_LLM\\.venv\\Lib\\site-packages\\gradio\\utils.py:1052: UserWarning: Expected 3 arguments for function <function port at 0x0000028D337F9800>, received 1.\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\srina\\projects\\llm_projects\\python_to_optimized_C++_LLM\\.venv\\Lib\\site-packages\\gradio\\utils.py:1056: UserWarning: Expected at least 3 arguments for function <function port at 0x0000028D337F9800>, received 1.\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* Running on local URL:  http://127.0.0.1:7861\n",
+      "* To create a public link, set `share=True` in `launch()`.\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div><iframe src=\"http://127.0.0.1:7861/\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/plain": []
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from styles import CSS\n",
+    "\n",
+    "language = \"C++\"\n",
+    "python_hard = pi\n",
+    "models = [OPENAI_MODEL]\n",
+    "\n",
+    "with gr.Blocks(css=CSS, theme=gr.themes.Monochrome(), title=f\"Port from Python to {language}\") as ui:\n",
+    "    with gr.Row(equal_height=True):\n",
+    "        with gr.Column(scale=6):\n",
+    "            python = gr.Code(\n",
+    "                label=\"Python (original)\",\n",
+    "                value=python_hard,\n",
+    "                language=\"python\",\n",
+    "                lines=26\n",
+    "            )\n",
+    "        with gr.Column(scale=6):\n",
+    "            cpp = gr.Code(\n",
+    "                label=f\"{language} (generated)\",\n",
+    "                value=\"\",\n",
+    "                language=\"cpp\",\n",
+    "                lines=26\n",
+    "            )\n",
+    "\n",
+    "    with gr.Row(elem_classes=[\"controls\"]):\n",
+    "        python_run = gr.Button(\"Run Python\", elem_classes=[\"run-btn\", \"py\"])\n",
+    "        model = gr.Dropdown(models, value=models[0], show_label=False, interactive=False)\n",
+    "        convert = gr.Button(f\"Port to {language}\", elem_classes=[\"convert-btn\"])\n",
+    "        cpp_run = gr.Button(f\"Run {language}\", elem_classes=[\"run-btn\", \"cpp\"])\n",
+    "\n",
+    "    with gr.Row(equal_height=True):\n",
+    "        with gr.Column(scale=6):\n",
+    "            python_out = gr.TextArea(label=\"Python result\", lines=8, elem_classes=[\"py-out\"])\n",
+    "        with gr.Column(scale=6):\n",
+    "            cpp_out = gr.TextArea(label=f\"{language} result\", lines=8, elem_classes=[\"cpp-out\"])\n",
+    "\n",
+    "    convert.click(fn=port, inputs=[python], outputs=[cpp])\n",
+    "    python_run.click(fn=run_python, inputs=[python], outputs=[python_out])\n",
+    "    cpp_run.click(fn=compile_and_run, inputs=[cpp], outputs=[cpp_out])\n",
+    "\n",
+    "ui.launch(inbrowser=True)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77170d17",
    "metadata": {},
    "outputs": [],
    "source": []
